--- a/css/header+footer.css
+++ b/css/header+footer.css
@@ -1,4 +1,4 @@
-#header {
+/*#header {
   position: fixed;
   top: 0; left: 0;
   z-index: 10;
@@ -6,10 +6,9 @@
   margin: 0 auto;
   padding: 5px;
   width: 100%;
-  height: 50px;
+  height: 0px;
   box-shadow: #ddd 0 0 10px 5px;
   background:rgb(252, 252, 252);
-  animation: fade-in 0.3s ease-in-out;
 }
 .logo {
   display: inline-block;
@@ -26,13 +25,7 @@
 }
 .logo:hover {
   opacity: 1;
-}
-.head {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  background-image: url('../img/night.png');
-}
+}*/
 
 /* qna로 넘어갈 때 display: none; */
 #footer {
@@ -66,28 +59,20 @@
   float: right;
   background-image: url("../img/github-logo.png");
 }
-.tistory {
-  float: right;
-  background-image: url("../img/tistory-logo.svg");
-  /*
-      로고 출처 : https://marshall-ku.tistory.com/134
-      감사합니다!!
-  */
-}
 
 @media all and (min-width: 768px) {
   /* qna에서 margin-top을 없애야 함 */
-  #header {
-    margin: 0 10%;
-    padding: 12.5px;
-    width: 80%;
-    height: 80px;
-    border-radius: 20px;
-  }
-  .logo {
-    width: 55px;
-    height: 55px;
-  }
+  /*#header {*/
+    /*margin: 0 10%;*/
+    /*padding: 12.5px;*/
+    /*width: 80%;*/
+    /*height: 0px;*/
+    /*border-radius: 20px;*/
+  /*}*/
+  /*.logo {*/
+    /*width: 55px;*/
+    /*height: 55px;*/
+  /*}*/
   #footer {
     margin: 40px 10% 0 10%;
     padding: 15px 30px;
@@ -108,17 +93,17 @@
 }
 
 @media all and (min-width: 1024px) {
-  #header {
+/*  #header {
     margin: 0 15%;
     padding: 15px;
     width: 70%;
-    height: 100px;
+    height: 0px;
     border-radius: 30px;
   }
   .logo {
     width: 70px;
     height: 70px;
-  }
+  }*/
   #footer {
     margin: 60px 15% 0 15%;
     padding: 25px 30px;
@@ -134,12 +119,12 @@
 }
 
 @media all and (min-width: 1440px) {
-  #header {
+/*  #header {
     margin: 0 22.5%;
     padding: 15px;
     width: 55%;
-    height: 100px;
-  }
+    height: 0px;
+  }*/
   #footer {
     margin: 80px 22.5% 0 22.5%;
     padding: 25px 30px;
