--- a/css/result.css
+++ b/css/result.css
@@ -12,41 +12,10 @@
   margin-bottom: 50px;
 }
 #score-box > .title {
-  animation: fade-in 0.6s ease-out 0.4s forwards, 
-          going-down 0.6s ease-out 0.4s forwards;
-  opacity: 0;
-}
-#score-box > .point {
-  margin: 10px 0 50px 0;
-  font-size: 64px;
-  font-size: 4rem;
-  font-weight: bolder;
-  animation: fade-in 0.6s ease-out 1.8s forwards, 
-          going-down 0.6s ease-out 1.8s forwards;
-  opacity: 0;
-}
-.pin {
-  width: 30px; 
-  height: 30px;
-  background-image: url('../img/pin.png');
-  background-size: cover;
-  animation: fade-in 0.5s ease-out 2.6s forwards, 
-          going-down 0.5s ease-out 2.6s forwards;
-  opacity: 0;
-}
-.score-bar {
-  margin: 0 5%;
-  width: 90%;
-  height: 50px;
-  border-radius: 50px;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#6fb7e8+0,855299+50,af3838+100 */
-  background: #6fb7e8; /* Old browsers */
-  background: -moz-linear-gradient(left,  #6fb7e8 0%, #855299 50%, #af3838 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left,  #6fb7e8 0%,#855299 50%,#af3838 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right,  #6fb7e8 0%,#855299 50%,#af3838 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6fb7e8', endColorstr='#af3838',GradientType=1 ); /* IE6-9 */
-  animation: fade-in 0.5s ease-out 2.5s forwards, 
-          going-down 0.5s ease-out 2.5s forwards;
+  font-size: 24px;
+  font-size: 1.5rem;
+  animation: fade-in 0.2s ease-out 0.2s forwards, 
+          going-down 0.2s ease-out 0.2s forwards;
   opacity: 0;
 }
 .art {
@@ -54,10 +23,8 @@
   width: 100%;
   height: 90vh;
   max-height: 700px;
-  box-shadow: #ddd 0px 0px 10px 5px;
-  background-color: #fff;
-  animation: fade-in 0.3s ease-out 3.2s both, 
-          going-down 0.3s ease-out 3.2s both;
+  animation: fade-in 1.0s ease-out 0.5s both, 
+          going-down 1.0s ease-out 0.5s both;
   opacity: 0;
 }
 .art > img {
@@ -67,6 +34,7 @@
   object-fit: contain;
 }
 .desc {
+  float: left;
   margin: 30px 7.5%;
   width: 85%;
   line-height: 28.8px;
@@ -75,62 +43,16 @@
   font-size: 1.1rem;
   font-weight: 350;
 }
+#desc-box > .title {
+  font-size: 24px;
+  font-size: 1.5rem;
+}
 #desc-box ~ p {
   display: inline-block;
   margin-top: 20px;
   font-size: 24px;
   font-size: 1.5rem;
   font-weight: bolder;
-}
-.go-artist {
-  font-weight: bolder;
-  cursor: pointer;
-}
-#share-box {
-  box-sizing: border-box;
-  margin: 25px 10% 30px 10%;
-  padding: 10px;
-  width: 80%;
-  height: 50px;
-  border-radius: 40px;
-  background: #222;
-}
-#share-box span {
-  display: inline-block;
-  margin-right: 5px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-size: cover;
-  cursor: pointer;
-}
-.tw {
-  background-image: url('../img/tw.svg');
-  /* 
-  자료 출처
-  http://www.vectorico.com/twitter-logo-white-on-blue/
-  */
-}
-.fb {
-  background-image: url('../img/fb.svg');
-  /* 
-  자료 출처
-  https://commons.wikimedia.org/wiki/File:Facebook_f_logo_(2019).svg
-  */
-}
-.nv {
-  background-image: url('../img/naver.png');
-  /*
-  자료 출처
-  https://www.facebook.com/184030231730640/photos/1175959155871071/
-  */
-}
-.band {
-  background-image: url('../img/band.png');
-  /*
-  자료 출처
-  https://upload.wikimedia.org/wikipedia/commons/3/30/2._BAND_Icon.png
-  */
 }
 .btn {
   box-sizing: border-box;
@@ -185,9 +107,6 @@
   font-size: 16.8px;
   font-size: 1.05rem;
 }
-.go-share {
-  cursor: pointer;
-}
 .caution {
   padding: 0 7.5%;
 }
@@ -219,10 +138,6 @@
   .artist {
     margin: 0 7.5% 30px 7.5%;
   }
-  #share-box {
-    margin: 25px 20% 30px 20%;
-    width: 60%;
-  }
   .hash {
     padding: 20px 7.5% 0;
   }
@@ -242,27 +157,24 @@
 }
 
 @media all and (min-width: 768px) {
-  #score-box > .point {
-    font-size: 72px;
-    font-size: 4.5rem;
-  }
-  .pin {
-    width: 40px; 
-    height: 40px;
-  }
   .art {
     max-height: 1500px;
   }
+  #score-box > .title {
+    font-size: 40px;
+    font-size: 2.5rem;
+  }
+  #desc-box > .title {
+    font-size: 40px;
+    font-size: 2.5rem;
+  }
   .desc {
+    float: left;
     margin: 30px 7.5%;
     line-height: 32px;
     line-height: 2rem;
     font-size: 19.2px;
     font-size: 1.2rem;
-  }
-  #share-box {
-    margin: 25px 30% 30px 30%;
-    width: 40%;
   }
   .hash {
     padding: 25px 7.5% 0;
@@ -297,26 +209,15 @@
 }
 
 @media all and (min-width: 1024px) {
-  #score-box > .point {
-    font-size: 80px;
-    font-size: 5rem;
-  }
-  .pin {
-    width: 50px; 
-    height: 50px;
-  }
   .art {
     margin: 0 5% 50px 5%;
     width: 90%;
     max-height: 2000px;
   }
   .desc {
+    float: left;
     font-size: 20.8px;
     font-size: 1.3rem;
-  }
-  .go-artist {
-    font-size: 17.6px;
-    font-size: 1.1rem;
   }
   .caution {
     padding: 15px 7.5%;
@@ -324,10 +225,6 @@
   .hash {
     font-size: 19.2px;
     font-size: 1.2rem;
-  }
-  #share-box {
-    margin: 25px 35% 30px 35%;
-    width: 30%;
   }
   .btn {
     margin: 0 35%;
@@ -349,14 +246,11 @@
 }
 
 @media all and (min-width: 1440px) {
-  #score-box > .point {
-    font-size: 88px;
-    font-size: 5.5rem;
-  }
   .art {
     max-height: 2000px;
   }
   .desc {
+    float: left;
     margin: 35px 5% 50px 5%;
     width: 90%;
     line-height: 33.6px;
