--- a/css/welcome.css
+++ b/css/welcome.css
@@ -37,7 +37,7 @@
 }
 hr {
   margin: 20px 0;
-  border: 1px dashed #888;
+  border: 1px solid #888;
 }
 .w-line {
   animation: fade-in 0.4s ease-out 0.2s both, 
@@ -72,8 +72,8 @@ hr {
   background-color: rgba(0, 135, 245, 0.9);
   color: #fff;
   font-weight: 600;
-  font-size: 32px;
-  font-size: 2rem;
+  font-size: 24px;
+  font-size: 1.5rem;
   animation: fade-in 0.6s ease-out 0.2s both, 
           going-down 0.6s ease-out 0.2s both,
           start-flicker 2.5s infinite;
@@ -148,10 +148,10 @@ hr {
   }
   .start {
     min-width: 80%;
-    height: 100px;
-    line-height: 100px;
-    font-size: 48px;
-    font-size: 3rem;
+    height: 60px;
+    line-height: 60px;
+    font-size: 32px;
+    font-size: 2rem;
   }
 }
 
