[JS]modify contents

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,15 +1,8 @@
 @charset "utf-8";
 
-#@font-face {
-    font-family: '국립박물관문화재단클래식B';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/국립박물관문화재단클래식B.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/국립박물관문화재단클래식B.woff') format('woff');
+@import url("https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");
 * {
-  font-family: '국립박물관문화재단클래식B';
+  font-family: 'Spoqa Han Sans', 'Sans-serif';
   transition: color 0.3s;
   transition: background-color 0.3s;
   box-sizing: border-box;
